# sentiment-stock-alpha

./: README.md  backtest_OKLO.json  features_AAPL.csv  features_DJT.csv  features_OKLO.csv  pyproject.toml
scripts/: run_backtest.py  run_features.py  run_ingest.py
src/: config.py
src/backtest/: align.py  engine.py  metrics.py  prices.py
src/features/: aggregate.py  attention.py  bucket.py
src/nlp/: lexicons.py  sentiment.py
src/redis_social_sentiment_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/signals/: rules.py
src/sources/: investing.py  stocktwits.py
src/storage/: reader.py  redis_client.py  schema.py  writer.py
src/viz/: plots.py
tests/: test_bucket.py  test_signals.py
